Fix alignment

--- a/components/mainFooter/mainFooter.scss
+++ b/components/mainFooter/mainFooter.scss
@@ -3,7 +3,8 @@ footer {
 }
 
 .footer {
-  padding: 4rem 0;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
 
   h3,
   h4,
